--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,197 @@
   <link rel="stylesheet" href="css/min.css">
 </head>
 <body class="bg-gray-200 antialiased">
-  <nav class="bg-indigo-500 block lg:flex justify-between lg:px-10">
-    <div class="flex items-center text-white text-xl p-4  border-b border-indigo-400 lg:p-0">
+  <!-- navigation -->
+  <nav class="bg-indigo-500 block lg:flex justify-between lg:px-10 shadow">
+    <div class="flex items-center text-white text-xl px-4 py-3  border-b lg:border-0 border-indigo-400 lg:p-0">
       <svg class="h-6 w-6 fill-current mr-2" version="1.1" id="Open_book" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
         <path d="M10.595,5.196l0.446,1.371c0.369-0.316,0.835-0.599,1.441-0.795c0.59-0.192,1.111-0.3,1.582-0.362l-0.43-1.323c-0.476,0.069-1.001,0.18-1.58,0.368C11.476,4.643,10.999,4.905,10.595,5.196z M11.522,8.051l0.446,1.371c0.369-0.316,0.835-0.599,1.441-0.795c0.59-0.192,1.111-0.3,1.582-0.362l-0.43-1.323c-0.476,0.069-1.001,0.18-1.58,0.368C12.403,7.497,11.927,7.759,11.522,8.051z M12.45,10.905l0.446,1.371c0.369-0.316,0.835-0.599,1.441-0.795c0.59-0.192,1.111-0.3,1.582-0.362l-0.43-1.323c-0.476,0.069-1.001,0.18-1.58,0.368C13.33,10.351,12.854,10.614,12.45,10.905zM5.388,13.077l0.43,1.323c0.417-0.226,0.902-0.445,1.492-0.636c0.606-0.197,1.149-0.242,1.633-0.203l-0.446-1.371c-0.499,0.002-1.038,0.07-1.615,0.257C6.303,12.635,5.813,12.853,5.388,13.077z M3.533,7.368l0.43,1.323C4.38,8.465,4.865,8.247,5.455,8.055c0.606-0.197,1.149-0.242,1.633-0.203L6.643,6.48C6.144,6.483,5.605,6.55,5.027,6.738C4.448,6.926,3.958,7.144,3.533,7.368z M4.46,10.223l0.43,1.323c0.417-0.226,0.902-0.445,1.492-0.636c0.606-0.197,1.149-0.242,1.633-0.203L7.57,9.335c-0.499,0.002-1.038,0.07-1.615,0.257C5.376,9.78,4.885,9.999,4.46,10.223zM11.064,1.41C9.341,1.97,8.441,3.162,8.011,3.969c-0.822-0.4-2.25-0.835-3.973-0.275c-2.523,0.82-3.969,2.627-3.969,2.627l4.095,12.587c0.126,0.387,0.646,0.477,0.878,0.143c0.499-0.719,1.46-1.658,3.257-2.242c1.718-0.558,2.969,0.054,3.655,0.578c0.272,0.208,0.662,0.06,0.762-0.268c0.252-0.827,0.907-2.04,2.61-2.593c1.799-0.585,3.129-0.389,3.956-0.1c0.385,0.134,0.75-0.242,0.625-0.629L15.819,1.203C15.819,1.203,13.587,0.591,11.064,1.41z M10.951,15.256c-0.819-0.244-1.901-0.358-3.141,0.044c-1.251,0.406-2.127,0.949-2.699,1.404L1.866,6.722C2.224,6.364,3.053,5.68,4.528,5.201c1.389-0.451,2.528-0.065,3.279,0.378L10.951,15.256z M17.845,12.567c-0.731-0.032-1.759,0.044-3.01,0.451c-1.24,0.403-2.048,1.132-2.567,1.81L9.124,5.151c0.346-0.8,1.04-1.782,2.43-2.233c1.474-0.479,2.547-0.413,3.047-0.334L17.845,12.567z"/>
       </svg>
       Book
     </div>
     <div class="lg:flex block items-center">
-      <a href="" class="text-indigo-200 py-2 px-5 hover:text-white hover:bg-indigo-600 block">Library</a>
-      <a href="" class="text-indigo-200 py-2 px-5 hover:text-white hover:bg-indigo-600 block">Store</a>
-      <a href="" class="text-indigo-200 py-2 px-5 hover:text-white hover:bg-indigo-600 block">About</a>
-      <a href="" class="text-indigo-200 py-2 px-5 hover:text-white hover:bg-indigo-600 block">Contact</a>
-      <a href="" class="text-indigo-200 py-2 px-5 hover:text-white hover:bg-indigo-600 block">Sign In</a>
+      <a href="" class="text-indigo-200 py-2 lg:py-5 px-5 hover:text-white hover:bg-indigo-600 block">Library</a>
+      <a href="" class="text-indigo-200 py-2 lg:py-5 px-5 hover:text-white hover:bg-indigo-600 block">Store</a>
+      <a href="" class="text-indigo-200 py-2 lg:py-5 px-5 hover:text-white hover:bg-indigo-600 block">About</a>
+      <a href="" class="text-indigo-200 py-2 lg:py-5 px-5 hover:text-white hover:bg-indigo-600 block">Contact</a>
+      <a href="" class="text-indigo-200 py-2 lg:py-5 px-5 hover:text-white hover:bg-indigo-600 block">Sign In</a>
     </div>
   </nav>
 
-  <div class="container bg-gray-900 text-white">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, exercitationem officiis earum, nobis nisi laborum tempore sapiente minima repellat qui facilis temporibus voluptatum deleniti? Dignissimos quasi doloremque quas reiciendis autem.
-  </div>
+  <main class="py-4">
+    <div class="container">
+      <!-- card -->
+      <div class="flex flex-col md:flex-row -mx-2 mb-4 item-start md:mb-0">
+        <div class="w-full md:w-1/3 mx-2 mb-5">
+          <img src="https://images.unsplash.com/photo-1550836911-acf40a328a29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="" class="rounded-lg h-56 w-full object-cover object-center">
+          <div class="px-5 -mt-5">
+            <div class="bg-white p-5 leading-relaxed text-gray-700 rounded-lg relative shadow-lg">
+              <div class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing.
+              </div>
+              <div>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Woman</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Travelling</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Panorama</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 mx-2 mb-5">
+          <img src="https://images.unsplash.com/photo-1550836911-acf40a328a29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="" class="rounded-lg h-56 w-full object-cover object-center">
+          <div class="px-5 -mt-5">
+            <div class="bg-white p-5 leading-relaxed text-gray-700 rounded-lg relative shadow-lg">
+              <div class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing.
+              </div>
+              <div>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Woman</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Travelling</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Panorama</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 mx-2 mb-5">
+          <img src="https://images.unsplash.com/photo-1550836911-acf40a328a29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="" class="rounded-lg h-56 w-full object-cover object-center">
+          <div class="px-5 -mt-5">
+            <div class="bg-white p-5 leading-relaxed text-gray-700 rounded-lg relative shadow-lg">
+              <div class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing.
+              </div>
+              <div>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Woman</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Travelling</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Panorama</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col md:flex-row -mx-2 mb-4 item-start md:mb-0">
+        <div class="w-full md:w-1/3 mx-2 mb-5">
+          <img src="https://images.unsplash.com/photo-1550836911-acf40a328a29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="" class="rounded-lg h-56 w-full object-cover object-center">
+          <div class="px-5 -mt-5">
+            <div class="bg-white p-5 leading-relaxed text-gray-700 rounded-lg relative shadow-lg">
+              <div class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing.
+              </div>
+              <div>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Woman</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Travelling</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Panorama</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 mx-2 mb-5">
+          <img src="https://images.unsplash.com/photo-1550836911-acf40a328a29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="" class="rounded-lg h-56 w-full object-cover object-center">
+          <div class="px-5 -mt-5">
+            <div class="bg-white p-5 leading-relaxed text-gray-700 rounded-lg relative shadow-lg">
+              <div class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing.
+              </div>
+              <div>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Woman</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Travelling</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Panorama</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 mx-2 mb-5">
+          <img src="https://images.unsplash.com/photo-1550836911-acf40a328a29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80" alt="" class="rounded-lg h-56 w-full object-cover object-center">
+          <div class="px-5 -mt-5">
+            <div class="bg-white p-5 leading-relaxed text-gray-700 rounded-lg relative shadow-lg">
+              <div class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing.
+              </div>
+              <div>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Woman</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Travelling</a>
+                <a href="" class="text-xs uppercase bg-gray-300 px-3 inline-block py-1 rounded-full">#Panorama</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- form -->
+      <div class="flex -mx-2 mb-5">
+        <div class="w-1/2 mx-2">
+          <div class="bg-white shadow p-5 rounded-lg">
+            <div class="text-xl font-semibold mb-3 uppercase">
+              Register
+            </div>
+
+            <form action="" autocomplete="off">
+              <div class="mb-5">
+                <label for="name" class="block uppercase text-xs mb-2">Name</label>
+                <input type="text" name="name" id="name" class="text-sm bg-gray-200 px-3 h-10 w-full border rounded-lg focus:outline-none focus:bg-white focus:border-blue-700">
+              </div>
+              <div class="mb-5">
+                <label for="email" class="block uppercase text-xs mb-2">Email</label>
+                <input type="email" name="email" id="email" class="text-sm bg-gray-200 px-3 h-10 w-full border rounded-lg focus:outline-none focus:bg-white focus:border-blue-700">
+              </div>
+              <div class="mb-5">
+                <label for="gender" class="block uppercase text-xs mb-2">Gender</label>
+                <div class="relative">
+                  <select name="gender" id="gender" class="appearance-none text-sm bg-gray-200 px-3 h-10 w-full border rounded-lg focus:outline-none focus:bg-white focus:border-blue-700">
+                    <option disabled selected>choose one</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                  </select>
+                  <div class="pointer-events-none absolute right-0 inset-y-0 flex items-center px-3">
+                    <svg class="fill-current w-4 h-4" version="1.1" id="Chevron_small_down" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
+                      <path d="M13.418,7.859c0.271-0.268,0.709-0.268,0.978,0c0.27,0.268,0.272,0.701,0,0.969l-3.908,3.83 c-0.27,0.268-0.707,0.268-0.979,0l-3.908-3.83c-0.27-0.267-0.27-0.701,0-0.969c0.271-0.268,0.709-0.268,0.978,0L10,11L13.418,7.859z"/>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="px-4 py-2 bg-blue-500 text-blue-100 hover:bg-blue-600 hover:text-white rounded-lg">Register</button>
+            </form>
+          </div>
+        </div>
+        <div class="w-1/2 mx-2">
+          <div class="bg-white shadow p-5 rounded-lg">
+            <div class="text-xl font-semibold mb-3 uppercase">
+              Register
+            </div>
+
+            <form action="" autocomplete="off">
+              <div class="mb-5">
+                <label for="name" class="block uppercase text-xs mb-2">Name</label>
+                <input type="text" name="name" id="name" class="form-input w-full">
+              </div>
+              <div class="mb-5">
+                <label for="email" class="block uppercase text-xs mb-2">Email</label>
+                <input type="email" name="email" id="email" class="form-input w-full">
+              </div>
+              <div class="mb-5">
+                <label for="gender" class="block uppercase text-xs mb-2">Gender</label>
+                <div class="relative">
+                  <select name="gender" id="gender" class="form-select w-full">
+                    <option disabled selected>choose one</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                  </select>
+                </div>
+              </div>
+              <button type="submit" class="px-4 py-2 bg-blue-500 text-blue-100 hover:bg-blue-600 hover:text-white rounded-lg">Register</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <!-- button -->
+      <div class="flex items-center justify-center h-screen">
+        <div class="w-1/3 bg-white shadow-lg rounded-lg py-16 text-center">
+          <a href="" class="btn btn-primary">Primary</a>
+          <button type="button" class="btn btn-warning">Warning</button>
+          <input type="button" class="btn btn-success" value="Success">
+        </div>
+      </div> 
+    </div>
+  </main>
 </body>
 </html>
